Apply a new fix for blurred images in Chrome v.92
Before v.92 it was sufficient to use 'transform: translateZ(0)',
but now it doesn't work on all images.

--- a/styles/main.css
+++ b/styles/main.css
@@ -970,7 +970,9 @@
   height: auto;
   margin: 6.647% 2.068% 0 auto; 
   min-width: 0; /* Aligns images and descriptions in Chrome. */
-  transform: translateZ(0); /* Fixes blurred images in Chrome. */
+  transform: scale(1.0224); /* Fixes blurred images in Chrome since v.92.
+                            In earlier versions of Chrome, 'transform: transaleZ(0)' worked, 
+                            but now it doesn't fix all the images. */
   width: 25%;
   z-index: 1; 
 }
